functions add. proofread and style soon

--- a/index.html
+++ b/index.html
@@ -4,26 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
   <link rel="stylesheet" href="./css/style.css" />
-  <title>Document</title>
+  <title>Quiz Wiz</title>
 </head>
-<body>
-  <header>
-    <div class="highscore">
-      <button id="highscore-btn">View Highscores</button>
+<body class="bg-dark">
+  <div class="container">
+    <div id="home" class="flex-column flex-container">
+      <h1 class="text-light">Are you Ready?</h1>
+      <a href="./game.html" class="btn">Play</a>
+      <a href="/highscores.html" id="highscore-btn" class="btn">High Scores</a>
     </div>
-    <div class="info">
-      <h1>Coding Quiz Challenge</h1>
-      <p class="header-instructions"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui a molestias quam pariatur quidem doloremque mollitia alias cum delectus fugiat rerum labore est perspiciatis, reiciendis perferendis, blanditiis laboriosam, ab at.</p>
-    </div>
-  </header>
-  <main>
-    <button id="start-btn" class="btn">Start Quiz</button>
-  </main>
+  </div>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="./js/script.js"></script> 
 </html>
